Fixing centering issue on mobile view

--- a/src/components/main/skills/skills.module.scss
+++ b/src/components/main/skills/skills.module.scss
@@ -25,10 +25,16 @@
 
     p {
         text-align: right;
+        @include breakpoint(small) {
+            text-align: center;
+        }
     }
 
     .tag-container {
         justify-content: flex-end;
+        @include breakpoint(small) {
+            justify-content: center;
+        }
     }
 
     @include breakpoint(small) {
